<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shipping.ShippingFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_shipping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/shipping_toolbar_title" />

    <TextView
        android:id="@+id/textview_shipping_blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_blank_message"
        android:textAppearance="@style/body_regular_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_shipping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/shipping_list_title"
        android:textAppearance="@style/body_regular_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_shipping" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/narrow_box_rounded_button_solid"
        android:text="@string/shipping_button_add"
        android:textAppearance="@style/body_regular_12"
        android:textColor="@color/jagi_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_shipping" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_shipping_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_shipping_list"
        tools:listitem="@layout/item_shipping" />

</androidx.constraintlayout.widget.ConstraintLayout>