<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shipping.ShippingAddUpdateFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_shipping_add_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/shippingaddupdate_toolbar_title" />

    <ScrollView
        android:id="@+id/scrollview_shipping_add_update"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/button_shipping_add_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_shipping_add_update">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_shipping_add_update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:boxStrokeColor="@color/jagi_brown"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_shipping_add_update_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shippingaddupdate_title_hint"
                    android:textAppearance="@style/body_regular_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_shipping_add_update_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/jagi_brown"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_shipping_add_update_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_shipping_add_update_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shippingaddupdate_address1_hint"
                    android:textAppearance="@style/body_regular_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_shipping_add_update_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/jagi_brown"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_shipping_add_update_address1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_shipping_add_update_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shippingaddupdate_address2_hint"
                    android:textAppearance="@style/body_regular_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_shipping_add_update_recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/jagi_brown"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_shipping_add_update_address2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_shipping_add_update_recipient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shippingaddupdate_recipient_hint"
                    android:textAppearance="@style/body_regular_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_shipping_add_update_recipient_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/jagi_brown"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_shipping_add_update_recipient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_shipping_add_update_recipient_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shippingaddupdate_recipient_phone_hint"
                    android:textAppearance="@style/body_regular_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_shipping_add_update_basic"
                style="@style/CustomCheckBoxSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_shipping_add_update_recipient_phone" />

            <TextView
                android:id="@+id/textview_shipping_add_update_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/shippingaddupdate_basic_option"
                android:textAppearance="@style/body_regular_13"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_shipping_add_update_basic"
                app:layout_constraintStart_toEndOf="@id/checkbox_shipping_add_update_basic"
                app:layout_constraintTop_toTopOf="@id/checkbox_shipping_add_update_basic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_shipping_add_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/wide_box_bottom_active"
        android:text="@string/shippingaddupdate_button_register"
        android:textAppearance="@style/body_regular_16"
        android:textColor="@color/jagi_hint_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview_shipping_add_update" />

</androidx.constraintlayout.widget.ConstraintLayout>